2008-02-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstminiobject.c:
	  Add FIXME for 0.11 to make GstMiniObjectClass::copy() a bit more
	  friendly to subclasses and not require them to know all internals
	  of their parent class.

2008-02-15  Stefan Kost  <ensonic@users.sf.net>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/base/gstcollectpads.c:
	* libs/gst/base/gstcollectpads.h:
	  Add sub-buffer functions to collectpads. Fixes #516187.
	  API: gst_collect_pads_take_buffer(), gst_collect_pads_read_buffer()

2008-02-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstbuffer.c:
	  Copy selected buffer-flags when creating subbuffers.
	  Fixes #516395.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstbuffer.c: (gst_buffer_class_init), (gst_buffer_finalize):
	* gst/gstevent.c: (gst_event_class_init), (gst_event_finalize):
	* gst/gstmessage.c: (gst_message_class_init),
	(gst_message_finalize):
	* gst/gstquery.c: (gst_query_class_init), (gst_query_finalize):
	* plugins/elements/gstfilesrc.c: (gst_mmap_buffer_class_init),
	(gst_mmap_buffer_finalize):
	Properly chain up finalize functions to the parent class.

2008-02-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Siavash Safi <siavash dot safi at gmail dot com>

	* gst/gstindex.c: (gst_index_finalize), (gst_index_set_resolver),
	(gst_index_set_resolver_full):
	* gst/gstindex.h:
	Add new function with option to dispose of user_data in resolver.
	Actually call the dispose function when finalizing the object and not
	just when changing the resolver/filter.
	API: GstIndex::gst_index_set_resolver_full()

	* docs/gst/gstreamer-sections.txt:
	Add new function to docs. Fixes #515469.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstindex.c: (gst_index_finalize):
	Chain up finalize to the parent class. Fixes leaking the GstObject
	name and other things.

2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac: