@@ -1,5 +1,11 @@
 2008-02-19  Sebastian Dröge  <slomo@circular-chaos.org>
 
+	* gst/parse/lex._gst_parse_yy.pre.c: (yy_get_next_buffer),
+	(_gst_parse_yyensure_buffer_stack), (_gst_parse_yylex_init_extra):
+	Update pre-generated flex files with flex 2.3.34.
+
+2008-02-19  Sebastian Dröge  <slomo@circular-chaos.org>
+
 	* gst/gstminiobject.c:
 	  Add FIXME for 0.11 to make GstMiniObjectClass::copy() a bit more
 	  friendly to subclasses and not require them to know all internals
